--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
