--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
     "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.4",
+    "leaflet": "^1.9.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
