--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.4",
+    "dayjs": "^1.11.7",
+    "emailjs-com": "^3.2.0",
     "leaflet": "^1.9.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.9"
   },
